🍺  formatting/autosave removed trailing whitespaces

--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -2,6 +2,6 @@
 extends ../layouts/layout
 
 block content
-	.container
-		main.main-page
-			p Mark's Portfolio 234
+  .container
+    main.main-page
+      p Mark's Portfolio
