👾  Playing around with emojies in footer

--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -1,3 +1,2 @@
 footer.footer-page
-  | By
-  a.footer-page__link(href="https://github.com/knochenmark") Knochenmark
+  p Made with #[span(class="emoji") &#x1F37A ] by #[a.footer-page__link(href="https://github.com/knochenmark") Knochenmark]
