🚧  Markup for layout WIP

--- a/src/views/layouts/layout.pug
+++ b/src/views/layouts/layout.pug
@@ -16,8 +16,8 @@ html:5
 
 		//- Content
 		block content
-		
-		//- Footer
-		include ../includes/footer
+
+		//- //- Footer
+		//- include ../includes/footer
 
 		script(async src='assets/js/main.js')
