🚩 add home navigation

--- a/src/styl/organisms/sidebar.styl
+++ b/src/styl/organisms/sidebar.styl
@@ -1,9 +1,15 @@
 aside.vertical-sidebar
-  width: 17vw;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 0;
-  border-right: 1px solid #eaeaea;
-  background-color: #fff;
+  width 17vw
+  height 100vh
+  position fixed
+  left 0
+  top 0
+  z-index 0
+  border-right 1px solid #eaeaea
+  background-color #fff
+  display flex
+  flex-direction column
+  justify-content flex-end
+  align-items center
+  .vertical-social
+    padding-bottom 1rem
