--- a/src/views/includes/home.pug
+++ b/src/views/includes/home.pug
@@ -4,6 +4,13 @@ section(id="home")
       .wrapper
         h1.author Knochenmark
         h2.subline Some cool wording
+        nav.home-navigation
+          .nav-item
+            a(href="#projects") Projects
+          .nav-item
+            a(href="#me") About Me
+          .nav-item
+            a(href="contact") Contact
   .dark-half
     .dark
 
