📰  Change the section markup and add some placeholder text

--- a/src/styl/organisms/footer.styl
+++ b/src/styl/organisms/footer.styl
@@ -1,5 +1,8 @@
 .footer-page
   text-align center
+  margin-left: 17vw;
+  p
+    margin-bottom 1rem
   .emoji
     font-size 2rem
     padding 0 0.5rem 0 0
