--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -13,7 +13,10 @@
     background-color white
     .light
       .wrapper
-        text-align: center;
+        text-align center
+        height 100%
+        display flex
+        flex-direction column
         .author
           width 100%
           padding-top 5vh
