✏️  added markup and placeholder content

--- a/src/views/includes/home.pug
+++ b/src/views/includes/home.pug
@@ -3,14 +3,14 @@ section(id="home")
     .light
       .wrapper
         h1.author Knochenmark
-        h2.subline Some cool wording
+        h2.subline design. code. experiment.
         nav.home-navigation
           .nav-item
             a(href="#projects") Projects
           .nav-item
-            a(href="#me") About Me
+            a(href="#about") About Me
           .nav-item
-            a(href="contact") Contact
+            a(href="#contact") Contact
   .dark-half
     .dark
 
