✏️  add style changes for sidebar, fonts and project view

--- a/src/styl/_settings/variables.styl
+++ b/src/styl/_settings/variables.styl
@@ -1,6 +1,6 @@
 /*
 * Variables
-* 
+*
 * 1. Colors
 * 2. Spaces
 * 3. Typography
@@ -15,7 +15,7 @@
 // --------------------------------------------------
 
 // Grays
-$white				= #fff	 
+$white				= #fff
 $gray-lighter		= #ecf0f1
 $gray-light			= #bdc3c7
 $gray				= #7f8c8d
@@ -27,7 +27,7 @@ $gray-darker		= #2c3e50
 $green       		= #27ae60
 $yellow      		= #f1c40f
 $red         		= #c0392b
-$blue         		= #2980b9 
+$blue         		= #2980b9
 $blue-light			= #3498db
 
 
@@ -74,7 +74,20 @@ $base-font-size		= 10
 
 $font-default		= 'Arial'
 
+@font-face
+  font-family "Abel"
+  font-style normal
+  src url("/assets/css/fonts/Abel-Regular.ttf")
 
+@font-face
+  font-family "Zilla Slab Highlight"
+  font-style normal
+  src url("/assets/css/fonts/ZillaSlabHighlight-Regular.ttf")
+
+@font-face
+  font-family "Unica One"
+  font-style normal
+  src url("/assets/css/fonts/UnicaOne-Regular.ttf")
 
 // 5. Dimensions
 // -------------------------------------------------
