--- a/src/styl/organisms/footer.styl
+++ b/src/styl/organisms/footer.styl
@@ -3,6 +3,11 @@
   margin-left: 17vw;
   p
     margin-bottom 1rem
+    a
+      color lightseagreen
+      &:hover
+        color lightcoral
+        text-decoration underline
   .emoji
     font-size 2rem
     padding 0 0.5rem 0 0
