--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -1,6 +1,37 @@
 #projects
+#about
+#contact
   position relative
   top 0
   left 0
   height 100vh
   margin-left 17vw
+  outline none
+  article
+    margin 8% 5.5%
+    padding 3% 0
+
+#projects
+  height unset
+
+.project-list
+  .project
+    margin-top 5%
+    a
+      display flex
+      flex-direction row
+      .project-img
+        flex 1
+        img
+          width 100%
+      .project-desc
+        flex 1
+        padding-left 5%
+        font-size 14px
+        color #151515
+        .project-title
+          padding-top 4%
+          margin-bottom 3%
+          font-weight 600
+        .project-text
+          font-size 13px
