--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -1,3 +1,6 @@
+body
+  overflow-x hidden
+
 #home
   height 100vh
   width 100vw
@@ -5,6 +8,7 @@
   top 0
   left 0
   z-index 2
+  outline none
   .light-half
   .dark-half
     height 50vh
@@ -19,13 +23,18 @@
         flex-direction column
         .author
           width 100%
-          padding-top 5vh
+          padding-top 2vh
           font-weight 600
-          font-size 14px
+          font-size 1.5rem
+          font-family 'Abel', sans-serif
           text-transform uppercase
           text-align center
-          letter-spacing 1px
+          letter-spacing 2px
+          color #999
         .subline
-          opacity 1
+          font-family: 'Unica One', sans-serif;
+          text-transform: uppercase;
+          letter-spacing: 2px;
+          color: #999;
   .dark-half
     background-color black
