--- a/src/styl/organisms/sidebar.styl
+++ b/src/styl/organisms/sidebar.styl
@@ -9,7 +9,14 @@ aside.vertical-sidebar
   background-color #fff
   display flex
   flex-direction column
-  justify-content flex-end
+  justify-content space-between
   align-items center
+  .vertical-logo
+    padding-top 2rem
+  .vertical-menu
+    width 100%
   .vertical-social
     padding-bottom 1rem
+    display flex
+    .icon
+      padding 0
