🏁  some minor changes and updating project files

--- a/src/styl/molecules/icons.styl
+++ b/src/styl/molecules/icons.styl
@@ -7,3 +7,9 @@
     fill lightseagreen
     &:hover
       fill lightcoral
+  &.codepen
+    svg
+      stroke lightseagreen
+    &:hover
+      svg
+        stroke lightcoral
