🚀  Add hover effect on project links

--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -28,6 +28,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/ZpYKPE/")
           .project-img
             img(src="assets/img/weather.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Weather App
             .project-text Using the darksky weather API to display the current weather, some other metrics and a preview of the current week.
@@ -35,6 +37,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/qrqjaQ/")
           .project-img
             img(src="assets/img/pomodoro.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Pomodoro
             .project-text Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.
@@ -42,6 +46,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/zwrWWP/")
           .project-img
             img(src="assets/img/tictac.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Tic Tac Toe
             .project-text Featuring some neat looking CSS transitions and effects.
@@ -49,6 +55,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/RRyAqE/")
           .project-img
             img(src="assets/img/quote.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Quote Generator
             .project-text With twitter function
@@ -56,6 +64,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/GjmZKr/")
           .project-img
             img(src="assets/img/wiki.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Wikipedia API
             .project-text Using the Wikipedia API
@@ -63,6 +73,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/YpRBjw/")
           .project-img
             img(src="assets/img/twitch.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Twitch API
             .project-text Using the Twitch API
@@ -70,6 +82,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/QgjErZ/")
           .project-img
             img(src="assets/img/simon.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Simon Game
             .project-text The memory game Simon using the HTML5 Audio tag.
@@ -77,6 +91,8 @@ section(id="projects")
         a(href="https://codepen.io/Knochenmark/full/qaWyOx/")
           .project-img
             img(src="assets/img/calc.jpg")
+            .project-link
+              div View on Codepen
           .project-desc
             .project-title Calculator
             .project-text Based on the iphone calculator
