--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -4,16 +4,18 @@
   position relative
   top 0
   left 0
-  height 100vh
   margin-left 17vw
   outline none
   article
     margin 8% 5.5%
     padding 3% 0
-
-#about
-#projects
-  height unset
+    h1
+      font-family 'Unica One', sans-serif
+      font-size 3rem
+      margin 0
+      text-transform uppercase
+      letter-spacing 2px
+      color #999
 
 .project-list
   .project
@@ -21,10 +23,44 @@
     a
       display flex
       flex-direction row
+      &:hover
+        .project-img
+          img
+            opacity 0.8
+          .project-link
+            opacity 1
+            background rgba(0,0,0, .8)
       .project-img
         flex 1
+        position relative
         img
+          transition all 0.3s ease
           width 100%
+        .project-link
+          transition all 0.5s ease
+          opacity 0
+          position absolute
+          display flex
+          justify-content center
+          align-items center
+          right 0
+          top 0
+          width 100%
+          height 100%
+          padding 3% 4.3%
+          color #999
+          font-size 16px
+          background rgba(0,0,0, .2)
+          div
+            padding 1rem 2rem
+            background #fff
+            color lightseagreen
+            font-size 1.5rem
+            text-align center
+            border 2px solid lightseagreen
+            &:hover
+              color lightcoral
+              border-color lightcoral
       .project-desc
         flex 1
         padding-left 5%
