🛀  add footer description and styles

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -72,3 +72,22 @@
           font-weight 600
         .project-text
           font-size 13px
+
+#contact
+  h2
+    font-size 3rem
+  .contact-content
+    font-size 2rem
+    font-family Georgia, sans-serif
+    font-style italic
+  .email
+    margin 5rem 0
+    font-size 5rem
+    a
+      text-decoration none
+      color lightseagreen
+      border-bottom 1px solid lightseagreen
+      margin-left 1rem
+      &:hover
+        color lightcoral
+        border-color lightcoral
