--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -107,11 +107,10 @@ section(id="about")
       Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur,
 section(id="contact")
   article
-    h1 Contact
-      h2 Thanks for visiting
-        .contact-content
-          .email
-            span Say hello
-            a(href="mailto:placeholder@gmail.com")  placeholder@gmail.com
+    h2 Thanks for coming by!
+    .contact-content I’m always open for a chat so feel free to contact me.
+    .email
+      span Say hi
+      a(href="mailto:placeholder@gmail.com") placeholder@gmail.com
 //- Footer
 include ../includes/footer
