🏆  Add about text and change email placeholder to actual email

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -73,6 +73,15 @@
         .project-text
           font-size 13px
 
+#about
+  p
+    color #666
+    line-height 3rem
+    font-size 1.6rem
+    span
+      font-style italic
+      color lightseagreen
+
 #contact
   h2
     font-size 3rem
