🎵  add stylus for back to top button

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -11,11 +11,23 @@
     padding 3% 0
     h1
       font-family 'Unica One', sans-serif
-      font-size 3rem
+      font-size 4rem
       margin 0
       text-transform uppercase
       letter-spacing 2px
-      color #999
+      color lightseagreen
+
+.back-to-top
+  position fixed
+  z-index 2
+  bottom 2rem
+  right 2rem
+  size 50px
+  svg
+    fill lightseagreen
+  &:hover
+    svg
+      fill lightcoral
 
 .project-list
   .project
