🎷  add hover style for projects and add the back to top link with icon

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -36,6 +36,8 @@
       display flex
       flex-direction row
       &:hover
+        outline-style double
+        outline-color lightseagreen
         .project-img
           img
             opacity 0.8
