--- a/src/views/includes/home.pug
+++ b/src/views/includes/home.pug
@@ -13,4 +13,5 @@ section(id="home")
             a(href="#contact") Contact
   .dark-half
     .dark
-
+a(href="#home" class="back-to-top")
+  include ../svg/arrow-up.svg
