🏀  add alt text to project images

--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -27,7 +27,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/ZpYKPE/")
           .project-img
-            img(src="assets/img/weather.jpg")
+            img(src="assets/img/weather.jpg" alt="weather app")
             .project-link
               div View on Codepen
           .project-desc
@@ -36,7 +36,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/qrqjaQ/")
           .project-img
-            img(src="assets/img/pomodoro.jpg")
+            img(src="assets/img/pomodoro.jpg" alt="pomodoro clock")
             .project-link
               div View on Codepen
           .project-desc
@@ -45,7 +45,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/zwrWWP/")
           .project-img
-            img(src="assets/img/tictac.jpg")
+            img(src="assets/img/tictac.jpg" alt="tic tac toe game")
             .project-link
               div View on Codepen
           .project-desc
@@ -54,7 +54,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/RRyAqE/")
           .project-img
-            img(src="assets/img/quote.jpg")
+            img(src="assets/img/quote.jpg" alt="quote and twitter api project")
             .project-link
               div View on Codepen
           .project-desc
@@ -63,7 +63,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/GjmZKr/")
           .project-img
-            img(src="assets/img/wiki.jpg")
+            img(src="assets/img/wiki.jpg" alt="wikipedia api project")
             .project-link
               div View on Codepen
           .project-desc
@@ -72,7 +72,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/YpRBjw/")
           .project-img
-            img(src="assets/img/twitch.jpg")
+            img(src="assets/img/twitch.jpg" alt="twitch api project")
             .project-link
               div View on Codepen
           .project-desc
@@ -81,7 +81,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/QgjErZ/")
           .project-img
-            img(src="assets/img/simon.jpg")
+            img(src="assets/img/simon.jpg" alt="simon game")
             .project-link
               div View on Codepen
           .project-desc
@@ -90,7 +90,7 @@ section(id="projects")
       .project
         a(href="https://codepen.io/Knochenmark/full/qaWyOx/")
           .project-img
-            img(src="assets/img/calc.jpg")
+            img(src="assets/img/calc.jpg" alt="calculator app")
             .project-link
               div View on Codepen
           .project-desc
