🀄️  update generated files and change email placeholder

--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -100,17 +100,13 @@ section(id="about")
   article
     h1 About Me
     p.
-      Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?
-    p.
-      Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können.
-    p.
-      Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur,
+      Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think #[span(class="whois") "Who's this self-absorbed guy?"]. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you like my stuff, I don't really care, but if you want to invite me for a beer, drop me a line. - Mark
 section(id="contact")
   article
     h2 Thanks for coming by!
     .contact-content I’m always open for a chat so feel free to contact me.
     .email
       span Say hi
-      a(href="mailto:placeholder@gmail.com") placeholder@gmail.com
+      a(href="mailto:marktodd.hl@gmail.com") marktodd.hl@gmail.com
 //- Footer
 include ../includes/footer
