🍒  make the portfolio responsive adapt for mobile

--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -38,3 +38,8 @@ body
           color: #999;
   .dark-half
     background-color black
+
++below($screen-sm)
+  .subline
+    padding 0 0.5rem
+    word-wrap white-space
