--- a/src/styl/organisms/sidebar.styl
+++ b/src/styl/organisms/sidebar.styl
@@ -20,3 +20,7 @@ aside.vertical-sidebar
     display flex
     .icon
       padding 0.5rem
+
++below($screen-sm)
+  aside.vertical-sidebar
+    display none;
