☎️  mobile style adjustments

--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -41,5 +41,5 @@ body
 
 +below($screen-sm)
   .subline
-    padding 0 0.5rem
-    word-wrap white-space
+    padding 0 0.25rem
+    margin-bottom 1.5rem
