--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -23,9 +23,12 @@
   z-index 2
   bottom 2rem
   right 2rem
-  size 50px
+  width 24px
+  height 24px
   svg
     fill lightseagreen
+    height 100%
+    width 100%
   &:hover
     svg
       fill lightcoral
@@ -128,5 +131,15 @@
     .project
       a
         flex-direction column
+        .project-desc
+          font-size 1.8rem
+          .project-text
+            font-size 1.8rem
+            color #666
   .back-to-top
+    width 36px
+    height 36px
     bottom 5rem
+    svg
+      &:hover
+        fill lightseagreen
