--- a/src/styl/organisms/sidebar.styl
+++ b/src/styl/organisms/sidebar.styl
@@ -15,6 +15,11 @@ aside.vertical-sidebar
     padding-top 2rem
   .vertical-menu
     width 100%
+    .home-navigation
+      .nav-item
+        a
+          &:hover
+            background-color #f0f0f0
   .vertical-social
     padding-bottom 2rem
     display flex
