--- a/src/styl/organisms/navbar.styl
+++ b/src/styl/organisms/navbar.styl
@@ -7,8 +7,6 @@ nav.home-navigation
   font-size 1.5rem
   text-transform uppercase
   letter-spacing 1px
-  background-color #fff
-  margin-top: auto
   padding-bottom: 2rem
   .nav-item
     display flex
@@ -29,7 +27,6 @@ nav.home-navigation
       vertical-align middle
       font-size 1.2rem
       font-weight 600
-      background-color #ffffff
       &:hover
-        background-color #fafafa
+        background-color #333
         color lightseagreen
