--- a/src/views/includes/home.pug
+++ b/src/views/includes/home.pug
@@ -1,9 +1,17 @@
+include ../includes/spinner
+
 section(id="home")
   .light-half
     .light
+      include ../includes/mondrian
+  .dark-half
+    a(href="https://github.com/Knochenmark/knochenmark.github.io/issues" class="bug-issues" title="report a bug")
+      include ../svg/bug.svg
+    .dark
       .wrapper
-        h1.author Knochenmark
-        h2.subline design. code. experiment.
+        .top
+          h1.author Knochenmark
+          h2.subline design. code. experiment.
         nav.home-navigation
           .nav-item
             a(href="#projects") Projects
@@ -11,7 +19,5 @@ section(id="home")
             a(href="#about") About Me
           .nav-item
             a(href="#contact") Contact
-  .dark-half
-    .dark
 a(href="#home" class="back-to-top")
   include ../svg/arrow-up.svg
