📝  Rework some project descriptions and add feature tags

--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -32,7 +32,12 @@ section(id="projects")
               div View on Codepen
           .project-desc
             .project-title Weather App
-            .project-text Using the darksky weather API to display the current weather, some other metrics and a preview of the current week.
+            .project-text A weather app that uses the darksky weather API to display the current weather, a forcast for the week and temperature values over the day. The units can be toggled between SI and Imperial with a click on the degree symbol.
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip darksky
       .project
         a(href="https://codepen.io/Knochenmark/full/qrqjaQ/")
           .project-img
@@ -42,6 +47,11 @@ section(id="projects")
           .project-desc
             .project-title Pomodoro
             .project-text Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip Mixins
       .project
         a(href="https://codepen.io/Knochenmark/full/zwrWWP/")
           .project-img
@@ -50,7 +60,12 @@ section(id="projects")
               div View on Codepen
           .project-desc
             .project-title Tic Tac Toe
-            .project-text Featuring some neat looking CSS transitions and effects.
+            .project-text The classic Tic-Tac-Toe game. Play a round against the computer and enjoy some neat looking CSS transitions and effects.
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip Transitions
       .project
         a(href="https://codepen.io/Knochenmark/full/RRyAqE/")
           .project-img
@@ -59,7 +74,12 @@ section(id="projects")
               div View on Codepen
           .project-desc
             .project-title Quote Generator
-            .project-text With twitter function
+            .project-text A simple Quote Generator, that uses the forismatic API to source new quotes. Request random quotes and if you find one you want to share you could use the twitter function.
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip Forismatic Api
       .project
         a(href="https://codepen.io/Knochenmark/full/GjmZKr/")
           .project-img
@@ -69,6 +89,11 @@ section(id="projects")
           .project-desc
             .project-title Wikipedia API
             .project-text Using the Wikipedia API
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip Wikipedia Api
       .project
         a(href="https://codepen.io/Knochenmark/full/YpRBjw/")
           .project-img
@@ -77,7 +102,12 @@ section(id="projects")
               div View on Codepen
           .project-desc
             .project-title Twitch API
-            .project-text Using the Twitch API
+            .project-text The app uses the Twitch API and features an overview of a selection of streamers and channels. Informations about the online status and what the streamer is playing are visible at a single glance.
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip Twitch Api
       .project
         a(href="https://codepen.io/Knochenmark/full/QgjErZ/")
           .project-img
@@ -87,6 +117,11 @@ section(id="projects")
           .project-desc
             .project-title Simon Game
             .project-text The memory game Simon using the HTML5 Audio tag.
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
+              .chip Audio
       .project
         a(href="https://codepen.io/Knochenmark/full/qaWyOx/")
           .project-img
@@ -96,6 +131,10 @@ section(id="projects")
           .project-desc
             .project-title Calculator
             .project-text Based on the iphone calculator
+            .chips
+              .chip Pug
+              .chip Stylus
+              .chip Js
 section(id="about")
   article
     h1 About Me
