--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -84,6 +84,8 @@
         padding-left 5%
         font-size 14px
         color #151515
+        display flex
+        flex-direction column
         .project-title
           padding-top 4%
           margin-bottom 3%
@@ -91,6 +93,19 @@
         .project-text
           font-size 13px
           padding-right 1rem
+        .chips
+          margin-top auto
+          margin-bottom .5rem
+          .chip
+            display inline-block
+            height 2.5rem
+            font-size 1.25rem
+            font-weight 500
+            color #fff
+            line-height 2.5rem
+            padding 0 0.8rem
+            border-radius 1rem
+            background-color #20b2aa
 
 #about
   p
