--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -94,8 +94,7 @@
           font-size 13px
           padding-right 1rem
         .chips
-          margin-top auto
-          margin-bottom .5rem
+          margin-bottom 1rem
           .chip
             display inline-block
             height 2.5rem
