⏰  Add margin to the feature chips

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -94,7 +94,7 @@
           font-size 13px
           padding-right 1rem
         .chips
-          margin-bottom 1rem
+          margin 1.5rem 0
           .chip
             display inline-block
             height 2.5rem
