--- a/src/styl/organisms/footer.styl
+++ b/src/styl/organisms/footer.styl
@@ -6,31 +6,31 @@
     transform: translateY(0em);
   }
   20% {
-    transform: translateY(-3rem);
+    transform: translateY(-20%);
   }
   30% {
-    transform: translateY(-3rem);
+    transform: translateY(-20%);
   }
   40% {
-    transform: translateY(-6rem);
+    transform: translateY(-40%);
   }
   50% {
-    transform: translateY(-6rem);
+    transform: translateY(-40%);
   }
   60%{
-    transform: translateY(-8.9rem);
+    transform: translateY(-60%);
   }
   70%{
-    transform: translateY(-8.9rem);
+    transform: translateY(-60%);
   }
   80% {
-    transform: translateY(-11.5rem);
+    transform: translateY(-80%);
   }
   90% {
-    transform: translateY(-11.5rem);
+    transform: translateY(-80%);
   }
   100% {
-    transform: translateY(-11.5rem);
+    transform: translateY(-80%);
   }
 }
 
@@ -45,7 +45,7 @@
         color lightcoral
         text-decoration underline
   .rotator
-    margin -1rem 0
+    margin -0.9rem 0
     display inline-block
     height 3rem
     width 3rem
