--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -36,75 +36,82 @@
 .project-list
   .project
     margin-top 5%
-    a
-      display flex
-      flex-direction row
-      &:hover
-        outline-style double
-        outline-color lightseagreen
-        .project-img
-          img
-            opacity 0.8
-          .project-link
-            opacity 1
-            background rgba(0,0,0, .8)
+    display flex
+    flex-direction row
+    &:hover
+      outline-style double
+      outline-color lightseagreen
       .project-img
-        flex 1
-        position relative
         img
-          transition all 0.3s ease
-          width 100%
+          opacity 0.8
         .project-link
-          transition all 0.5s ease
-          opacity 0
-          position absolute
-          display flex
-          justify-content center
-          align-items center
-          right 0
-          top 0
-          width 100%
-          height 100%
-          padding 3% 4.3%
-          color #999
-          font-size 16px
-          background rgba(0,0,0, .2)
-          div
-            padding 1rem 2rem
-            background #fff
-            color lightseagreen
-            font-size 1.5rem
-            text-align center
-            border 2px solid lightseagreen
-            &:hover
-              color lightcoral
-              border-color lightcoral
-      .project-desc
-        flex 1
-        padding-left 5%
-        font-size 14px
-        color #151515
+          opacity 1
+          background rgba(0,0,0, .8)
+    .project-img
+      flex 1
+      position relative
+      img
+        transition all 0.3s ease
+        width 100%
+      .project-link
+        transition all 0.5s ease
+        opacity 0
+        position absolute
         display flex
-        flex-direction column
+        justify-content center
+        align-items center
+        right 0
+        top 0
+        width 100%
+        height 100%
+        padding 3% 4.3%
+        color #999
+        font-size 16px
+        background rgba(0,0,0, .2)
+        a
+          padding 1rem 2rem
+          background #fff
+          color lightseagreen
+          font-size 1.5rem
+          text-align center
+          border 2px solid lightseagreen
+          &:hover
+            color lightcoral
+            border-color lightcoral
+    .project-desc
+      flex 1
+      padding-left 5%
+      font-size 14px
+      color #151515
+      display flex
+      flex-direction column
+      .title-wrapper
+        display flex
+        align-items center
         .project-title
-          padding-top 4%
-          margin-bottom 3%
-          font-weight 600
-        .project-text
-          font-size 13px
-          padding-right 1rem
-        .chips
-          margin 1.5rem 0
-          .chip
-            display inline-block
-            height 2.5rem
-            font-size 1.25rem
-            font-weight 500
-            color #fff
-            line-height 2.5rem
-            padding 0 0.8rem
-            border-radius 1rem
-            background-color #20b2aa
+          font-size: 1.8rem;
+          padding-top: 4%;
+          margin-bottom: 3%;
+          font-weight: 600;
+      .project-title
+        padding-top 4%
+        margin-bottom 3%
+        font-weight 600
+      .project-text
+        font-size 13px
+        padding-right 1rem
+      .chips
+        margin 1.5rem 0
+        .chip
+          display inline-block
+          height 2.5rem
+          font-size 1.25rem
+          font-weight 500
+          color #fff
+          line-height 2.5rem
+          padding 0 0.8rem
+          border-radius 1rem
+          background-color #20b2aa
 
 #about
   p
