--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -25,116 +25,140 @@ section(id="projects")
     h1 Projects
     .project-list
       .project
-        a(href="https://codepen.io/Knochenmark/full/ZpYKPE/")
-          .project-img
-            img(src="assets/img/weather.jpg" alt="weather app")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/weather.jpg" alt="weather app")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/ZpYKPE/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Weather App
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip darksky
-            .project-text A weather app that uses the darksky weather API to display the current weather, a forcast for the week and temperature values over the day. The units can be toggled between SI and Imperial with a click on the degree symbol.
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/ZpYKPE/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip darksky
+          .project-text A weather app that uses the darksky weather API to display the current weather, a forcast for the week and temperature values over the day. The units can be toggled between SI and Imperial with a click on the degree symbol.
       .project
-        a(href="https://codepen.io/Knochenmark/full/qrqjaQ/")
-          .project-img
-            img(src="assets/img/pomodoro.jpg" alt="pomodoro clock")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/pomodoro.jpg" alt="pomodoro clock")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/qrqjaQ/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Pomodoro
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip Mixins
-            .project-text Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/qrqjaQ/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip Mixins
+          .project-text Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.
       .project
-        a(href="https://codepen.io/Knochenmark/full/zwrWWP/")
-          .project-img
-            img(src="assets/img/tictac.jpg" alt="tic tac toe game")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/tictac.jpg" alt="tic tac toe game")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/zwrWWP/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Tic Tac Toe
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip Transitions
-            .project-text The classic Tic-Tac-Toe game. Play a round against the computer and enjoy some neat looking CSS transitions and effects.
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/zwrWWP/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip Transitions
+          .project-text The classic Tic-Tac-Toe game. Play a round against the computer and enjoy some neat looking CSS transitions and effects.
       .project
-        a(href="https://codepen.io/Knochenmark/full/RRyAqE/")
-          .project-img
-            img(src="assets/img/quote.jpg" alt="quote and twitter api project")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/quote.jpg" alt="quote and twitter api project")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/RRyAqE/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Quote Generator
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip Forismatic Api
-            .project-text A simple Quote Generator, that uses the forismatic API to source new quotes. Request random quotes and if you find one you want to share you could use the twitter function.
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/RRyAqE/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip Forismatic Api
+          .project-text A simple Quote Generator, that uses the forismatic API to source new quotes. Request random quotes and if you find one you want to share you could use the twitter function.
       .project
-        a(href="https://codepen.io/Knochenmark/full/GjmZKr/")
-          .project-img
-            img(src="assets/img/wiki.jpg" alt="wikipedia api project")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/wiki.jpg" alt="wikipedia api project")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/GjmZKr/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Wikipedia API
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip Wikipedia Api
-            .project-text Using the Wikipedia API
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/GjmZKr/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip Wikipedia Api
+          .project-text Using the Wikipedia API
       .project
-        a(href="https://codepen.io/Knochenmark/full/YpRBjw/")
-          .project-img
-            img(src="assets/img/twitch.jpg" alt="twitch api project")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/twitch.jpg" alt="twitch api project")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/YpRBjw/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Twitch API
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip Twitch Api
-            .project-text The app uses the Twitch API and features an overview of a selection of streamers and channels. Informations about the online status and what the streamer is playing are visible at a single glance.
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/YpRBjw/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip Twitch Api
+          .project-text The app uses the Twitch API and features an overview of a selection of streamers and channels. Informations about the online status and what the streamer is playing are visible at a single glance.
       .project
-        a(href="https://codepen.io/Knochenmark/full/QgjErZ/")
-          .project-img
-            img(src="assets/img/simon.jpg" alt="simon game")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/simon.jpg" alt="simon game")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/QgjErZ/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Simon Game
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-              .chip Audio
-            .project-text The memory game Simon using the HTML5 Audio tag.
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/QgjErZ/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+            .chip Audio
+          .project-text The memory game Simon using the HTML5 Audio tag.
       .project
-        a(href="https://codepen.io/Knochenmark/full/qaWyOx/")
-          .project-img
-            img(src="assets/img/calc.jpg" alt="calculator app")
-            .project-link
-              div View on Codepen
-          .project-desc
+        .project-img
+          img(src="assets/img/calc.jpg" alt="calculator app")
+          .project-link
+            a(href="https://codepen.io/Knochenmark/full/qaWyOx/") View on Codepen
+        .project-desc
+          .title-wrapper
             .project-title Calculator
-            .chips
-              .chip Pug
-              .chip Stylus
-              .chip Js
-            .project-text Based on the iphone calculator
+            .icon(title="View on Codepen")
+              a(href="https://codepen.io/Knochenmark/full/qaWyOx/")
+                include ../svg/link.svg
+          .chips
+            .chip Pug
+            .chip Stylus
+            .chip Js
+          .project-text Based on the iphone calculator
 section(id="about")
   article
     h1 About Me
