--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -1,3 +1,21 @@
+mixin project(project)
+  .project
+    .project-img
+      img(src=project.imageUrl alt=project.title)
+      .project-link
+        a(href=project.link) View on Codepen
+    .project-desc
+      .title-wrapper
+        .project-title= project.title
+        .icon(title="View on Codepen")
+          a(href=project.link)
+            include ../svg/link.svg
+      .chips
+        each chip in project.chips
+          .chip= chip
+      .project-text= project.text
+
+
 aside(class="vertical-sidebar")
     .vertical-logo
       .icon
@@ -24,141 +42,9 @@ section(id="projects")
   article
     h1 Projects
     .project-list
-      .project
-        .project-img
-          img(src="assets/img/weather.jpg" alt="weather app")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/ZpYKPE/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Weather App
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/ZpYKPE/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip darksky
-          .project-text A weather app that uses the darksky weather API to display the current weather, a forcast for the week and temperature values over the day. The units can be toggled between SI and Imperial with a click on the degree symbol.
-      .project
-        .project-img
-          img(src="assets/img/pomodoro.jpg" alt="pomodoro clock")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/qrqjaQ/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Pomodoro
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/qrqjaQ/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip Mixins
-          .project-text Based on the kitchen clock which is also used for the pomodoro technique to manage time intervals of 25min work and 5min breaks. This project features some really impressive pug and stylus function and mixin usage.
-      .project
-        .project-img
-          img(src="assets/img/tictac.jpg" alt="tic tac toe game")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/zwrWWP/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Tic Tac Toe
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/zwrWWP/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip Transitions
-          .project-text The classic Tic-Tac-Toe game. Play a round against the computer and enjoy some neat looking CSS transitions and effects.
-      .project
-        .project-img
-          img(src="assets/img/quote.jpg" alt="quote and twitter api project")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/RRyAqE/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Quote Generator
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/RRyAqE/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip Forismatic Api
-          .project-text A simple Quote Generator, that uses the forismatic API to source new quotes. Request random quotes and if you find one you want to share you could use the twitter function.
-      .project
-        .project-img
-          img(src="assets/img/wiki.jpg" alt="wikipedia api project")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/GjmZKr/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Wikipedia API
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/GjmZKr/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip Wikipedia Api
-          .project-text Using the Wikipedia API
-      .project
-        .project-img
-          img(src="assets/img/twitch.jpg" alt="twitch api project")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/YpRBjw/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Twitch API
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/YpRBjw/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip Twitch Api
-          .project-text The app uses the Twitch API and features an overview of a selection of streamers and channels. Informations about the online status and what the streamer is playing are visible at a single glance.
-      .project
-        .project-img
-          img(src="assets/img/simon.jpg" alt="simon game")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/QgjErZ/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Simon Game
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/QgjErZ/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-            .chip Audio
-          .project-text The memory game Simon using the HTML5 Audio tag.
-      .project
-        .project-img
-          img(src="assets/img/calc.jpg" alt="calculator app")
-          .project-link
-            a(href="https://codepen.io/Knochenmark/full/qaWyOx/") View on Codepen
-        .project-desc
-          .title-wrapper
-            .project-title Calculator
-            .icon(title="View on Codepen")
-              a(href="https://codepen.io/Knochenmark/full/qaWyOx/")
-                include ../svg/link.svg
-          .chips
-            .chip Pug
-            .chip Stylus
-            .chip Js
-          .project-text Based on the iphone calculator
+      //- projects is part of the data object that is passed to the pug files. See "data.json"
+      each project in projects
+        +project(project)
 section(id="about")
   article
     h1 About Me
