--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -17,6 +17,19 @@ body
   .dark-half
     background-color black
     position relative
+    &:after
+      content ""
+      background url(/./assets/img/ergodox01.jpg)
+      background-repeat no-repeat
+      background-size cover
+      background-position center
+      opacity 0.2
+      top 0
+      left 0
+      bottom 0
+      right 0
+      position absolute
+      pointer-events none
     .bug-issues
       position absolute
       left 5px
@@ -45,10 +58,10 @@ body
           letter-spacing 2px
           color #999
         .subline
-          font-family: 'Unica One', sans-serif;
-          text-transform: uppercase;
-          letter-spacing: 2px;
-          color: #999;
+          font-family 'Unica One', sans-serif
+          text-transform uppercase
+          letter-spacing 2px
+          color #999
   .light-half
     background-color white
 
