🔩  Improve the mondrian animation

--- a/src/views/includes/mondrian.pug
+++ b/src/views/includes/mondrian.pug
@@ -1,25 +1,22 @@
 #mondrian1.offscreen
-  .rectangles
-    .rec.yellow
-    .rec.red
-    .rec.blue
-    .rec.red
-    .rec.yellow
-    .rec.yellow
-    .rec.red
-    .rec.red
-    .rec.yellow
-    .rec.blue
-    .rec.blue
-  .horizontal
-    .line
-    .line
-    .line
-    .line
-    .line
-  .vertical
-    .line
-    .line
-    .line
-    .line
-    .line
+  hr.horizontal
+  span.vertical
+  hr.horizontal
+  span.vertical
+  .rec.yellow
+  hr.horizontal
+  span.vertical
+  .rec.red
+  hr.horizontal
+  span.vertical
+  .rec.blue
+  .rec.red
+  hr.horizontal
+  span.vertical
+  .rec.yellow
+  .rec.yellow
+  .rec.red
+  .rec.red
+  .rec.yellow
+  .rec.blue
+  .rec.blue
