🔨  Fix mondrian animation

--- a/src/styl/molecules/mondrian.styl
+++ b/src/styl/molecules/mondrian.styl
@@ -6,7 +6,7 @@ $mondrianYellow = yellow
 
 transitionDelay(n)
   :nth-child({n})
-    transition 0.8s all ease-in alternate infinite
+    transition 0.8s all ease-in
     transition-delay: multiplyDelay(unit(n, "s"))
 
 multiplyDelay(a)
