--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -69,3 +69,11 @@ body
   .subline
     padding 0 0.25rem
     margin-bottom 1.5rem
+
+@media only screen and (orientation: portrait)
+  #home
+    flex-direction: column-reverse
+    .light-half
+    .dark-half
+      height 50vh
+      width 100vw
