👓  Adjust the project view for mobile devices

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -165,3 +165,14 @@
     svg
       &:hover
         fill lightseagreen
+
+@media only screen
+  .project-list
+    .project
+      flex-direction column-reverse
+      .project-desc
+        flex unset
+        padding 0 1rem 2rem 1rem
+        .project-text
+          font-size 1.5rem
+          line-height 1.8rem
