🎨  Create and use variables for main colors

--- a/src/styl/molecules/icons.styl
+++ b/src/styl/molecules/icons.styl
@@ -1,15 +1,15 @@
 .icon
   padding 1rem
-  fill lightseagreen
+  fill $primaryColor
   &:hover
-    fill lightcoral
+    fill $secondaryColor
   a
-    fill lightseagreen
+    fill $primaryColor
     &:hover
-      fill lightcoral
+      fill $secondaryColor
   &.codepen
     svg
-      stroke lightseagreen
+      stroke $primaryColor
     &:hover
       svg
-        stroke lightcoral
+        stroke $secondaryColor
