--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -39,7 +39,7 @@ body
         transform rotate(-45deg)
       &:hover
         svg
-          fill lightseagreen
+          fill $primaryColor
     .dark
       .wrapper
         text-align center
