--- a/src/styl/organisms/footer.styl
+++ b/src/styl/organisms/footer.styl
@@ -40,9 +40,9 @@
   p
     margin-bottom 2rem
     a
-      color lightseagreen
+      color $primaryColor
       &:hover
-        color lightcoral
+        color $secondaryColor
         text-decoration underline
   .rotator
     margin -0.9rem 0
