--- a/src/styl/organisms/navbar.styl
+++ b/src/styl/organisms/navbar.styl
@@ -29,4 +29,4 @@ nav.home-navigation
       font-weight 600
       &:hover
         background-color #333
-        color lightseagreen
+        color $primaryColor
