🔧  Fix projects media queries for larger screen sizes

--- a/src/styl/organisms/pages.styl
+++ b/src/styl/organisms/pages.styl
@@ -166,7 +166,7 @@
       &:hover
         fill $primaryColor
 
-@media only screen
+@media only screen and (max-device-width: 768px)
   .project-list
     .project
       flex-direction column-reverse
