--- a/src/views/includes/home.pug
+++ b/src/views/includes/home.pug
@@ -19,5 +19,6 @@ section(id="home")
             a(href="#about") About Me
           .nav-item
             a(href="#contact") Contact
+    .image-wrapper
 a(href="#home" class="back-to-top")
   include ../svg/arrow-up.svg
