--- a/src/views/includes/pages.pug
+++ b/src/views/includes/pages.pug
@@ -49,7 +49,7 @@ section(id="about")
   article
     h1 About Me
     p.
-      Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think #[span(class="whois") "Who's this self-absorbed guy?"]. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you like my stuff, I don't really care, but if you want to invite me for a beer, drop me a line. - Mark
+      Hi, I'm Mark! You know what I love most about my portfolio? It's about me. You might think #[span(class="whois") "Who's this self-absorbed guy?"]. Well, thanks for this question, but I'll answer another question first. Yes, I'm good at what I do and when you love yourself, you can't help but love your craft. I like things functional and minimalistic. That's me in a nutshell. If you dont like my stuff, build your own playground, but if you enjoyed it and want to know more, just drop me a line. - Mark
 section(id="contact")
   article
     h2 Thanks for coming by!
