--- a/src/styl/organisms/navbar.styl
+++ b/src/styl/organisms/navbar.styl
@@ -18,7 +18,7 @@ nav.home-navigation
     &:first-child
       border-top 1px solid #f0f0f0
     a
-      color #777
+      color #999
       height 1.5rem
       line-height 3.5rem
       height 100%
@@ -28,5 +28,5 @@ nav.home-navigation
       font-size 1.2rem
       font-weight 600
       &:hover
-        background-color #333
+        background-color rgba(255,255,255,0.2)
         color $primaryColor
