🔥 fix bug icon zindex

--- a/src/styl/organisms/home.styl
+++ b/src/styl/organisms/home.styl
@@ -48,6 +48,7 @@ body
       position absolute
       left 5px
       bottom 8px
+      z-index 2
       svg
         fill #999
         transform rotate(-45deg)
